rgba no longer supported for tap feature on ios, trying transparent

--- a/stylesheets/scss/style.scss
+++ b/stylesheets/scss/style.scss
@@ -111,7 +111,7 @@ header.header-main {
 /* --------------------------------------- */
 
 html {
-    -webkit-tap-highlight-color: rgba(0,0,0,0);
+    -webkit-tap-highlight-color: transparent;
 }
 
 nav {
